# ML-privacy

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: __init__.py
src/analysis/: __init__.py  evaluator.py
src/attacks/: __init__.py  lossbased_attack.py  membership_inference_attack.py
src/data/: __init__.py  dataset_handler.py
src/models/: architecture.py  model_wrapper.py
src/utils/: logger.py
