[project]
name = "ml-privacy"
version = "0.1.0"
description = "Privacy Engineering course mini project 2: Loss-based Membership Inference Attack on Machine Learning Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["torch>=2.2.2", "torchvision>=0.17.2", "numpy<2.0.0"]

[tool.uv]
required-environments = [
	"sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = false

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
exclude = [".venv", "main.py"]
select = ["E", "F", "W", "C90", "B", "B9", "ANN", "COM", "D", "ERA", "ISC", "N", "Q000", "S", "SIM", "TID251", "UP", "YTT", "T"]
ignore = [
	"D203",  # incorrect-blank-line-before-class
	"D213",  # multi-line-summary-second-line
	"D301",  # Use r""" if any backslashes in a docstring
	"S311",  # random-module
]